Updated README.md and made small correction in config/pairedWithIgnoreExample.xml